2001-01-18  Radek Doulik  <rodo@helixcode.com>

	* htmltext.c (object_split): take care of split in &nbsp; sequence

	* htmlobject.c (html_object_merge): added engine parameter

	* htmlengine-edit-cut-and-paste.c (html_engine_insert_text): call
	convert nbsp

	* htmltext.c (merge_word_width): new function
	(object_merge): use merge_word_width

	* gtkhtml.c (command): added
	GTK_HTML_COMMAND_DELETE_BACK_OR_INDENT_DEC command
	(load_keybindings): bind backspace to new command

	* htmlengine-edit.c (html_engine_cursor_on_bop): new function
	(html_engine_get_indent): new function

	* htmlrule.c (save): save all attributes

	* htmltext.c (html_text_op_cut_helper): convert nbsp
	(html_text_convert_nbsp): new helper function, takes care of nbsp
	converting
	(convert_nbsp): refactored, does only actual rewrite
	(is_convert_nbsp_needed): extracted 1st pass where we find out if
	convert is neccessary
	(split_word_width): new functions, takes care of word_width cache
	for splitted text
	(clear_word_width): helper function, clears word width cache

2001-01-16  Radek Doulik  <rodo@helixcode.com>

	* htmlclue.c (forall): use pnext to remember p->next as p could be
	removed in func call

	* gtkhtml.c (gtk_html_set_color): new function

	* htmltext.c (html_text_op_cut_helper): remove spell errors from
	cuted part

	* htmlengine-edit-cut-and-paste.c (prepare_delete_bounds): if
	level > 1 prepend NULL before left and right

	* htmlclueflow.c (get_post_padding): add post padding for header
	preceding another header too

	* htmlengine.c (insert_text): create new text if para is pending

2001-01-12  Radek Doulik  <rodo@helixcode.com>

	* htmlclueflow.c (search): fixed crash for empty document

2001-01-11  Radek Doulik  <rodo@helixcode.com>

	* htmlclue.c (merge): merge all clues

	* htmltext.c (html_text_op_cut_helper): move spell_errors
	(html_text_op_cut_helper): remove spell errors when cutting whole
	text
	(object_split): update spell errors
	(remove_spell_errors): make it exact